# project-hermes

./: .gitignore  CMakeLists.txt  Net.Server.Basic.cbp  Net.Server.Basic.depend  Net.Server.Basic.layout  Project.Hermes.cbp  Project.Hermes.depend  Project.Hermes.layout  README.md  _errors.txt  _notes.txt
inc/: core.hpp  http.hpp  log.hpp  net.hpp  os.hpp  watch.hpp
inc/core/: CApp.hpp  CError.hpp  CEvent.hpp  CEventEmiter.hpp  CEventEmmiter.hpp  CEventListener.hpp  CException.hpp  CSynchronizable.hpp  CTaskManager.hpp  TSingleton.hpp
inc/http/: AMiddleware.hpp  CApp.hpp  CFileSystem.hpp  CHeader.hpp  CRequest.hpp  CRequestEvent.hpp  CResponse.hpp  CRouter.hpp  CServer.hpp
inc/log/: CLogger.hpp  CLogger.hpp.save-failed
inc/net/: CCloseEvent.hpp  CConnectionException.hpp  CError.hpp  CErrorEvent.hpp  CMessage.hpp  CRequest.hpp  CRequestEvent.hpp  CServer.hpp  CSocket.hpp
inc/net/http/: CEvent.hpp  CRequest.hpp
old/Net.Emag.Server/: notes.01.cpp  notes.02.cpp
old/Net.Emag.Server/src/: main.cpp
old/Net.Emag.Server/src/net/: net.event.hpp  (+2 more)
old/Net.Http.Server/: main.cpp
old/Net.Http.Server/inc/: core.hpp  net.hpp
old/Net.Http.Server/src/: main.cpp  test.cpp
old/Net.Packing/: main.cpp
old/Net.Server.Basic/: Net.Server.Basic.depend  Net.Server.Basic.layout  Project.Hermes.cbp  Project.Hermes.depend  Project.Hermes.layout
old/Net.Server.Basic/inc/: core.hpp
old/Net.Server.Basic/src/: main.cpp  main.old  net.cpp  test.cpp
src/: core.cpp  main.cpp  watch.cpp
src/core/: CError.cpp  CTaskManager.cpp
src/log/: CLogger.cpp
src/net/: CServer.cpp
(+54 files in other folders)
